tests/errors/validation/namespace-inside-type.fn
---
Description: Namespace declared inside a type
Expected: FN2001
---

type BadType
{
    namespace Oops
    {
    }
}

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
